Remove usage of Collections.singletonList